--- a/2-col-grid/css/stili.css
+++ b/2-col-grid/css/stili.css
@@ -3,3 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.wrapper{
+    display: flex;
+    width: 90%;
+    margin: auto;
+}
+/*Sidebar*/
+nav{
+    background-color: aquamarine;
+    width: 25%;
+}
+/*Main*/
+main{
+    width: 75%;
+    background-color: blueviolet;
+}
